mdapipkg/objects/Coupon__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Apply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Apply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Rules__c</fullName>
        <label>Business Rules if Any</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cart Value &gt; $</fullName>
                </value>
                <value>
                    <fullName>First Customer Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cart_Over_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cart Over Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Coupon_Code__c</fullName>
        <label>Coupon Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <description>The discount amount in dollars or %</description>
        <label>Amount Off</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discount %</fullName>
                </value>
                <value>
                    <fullName>$ Off</fullName>
                    <default>true</default>
                    <label>$ Off</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Coupons</relationshipLabel>
        <relationshipName>Coupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uses_Limit_Value__c</fullName>
        <label>Uses Limit Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uses_Limit__c</fullName>
        <label>Uses Limit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Overall</fullName>
                    <default>true</default>
                    <label>Overall</label>
                </value>
                <value>
                    <fullName>Per Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visible_Name__c</fullName>
        <label>Visible Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Coupon</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Coupon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Auto_Apply_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Auto_Apply__c = TRUE 
&amp;&amp; Coupon_Code__c != NULL</errorConditionFormula>
        <errorDisplayField>Coupon_Code__c</errorDisplayField>
        <errorMessage>&quot;Coupon Code&quot; must be empty for Auto-Apply coupon.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Amount_Off</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL( Discount_Type__c , &apos;Discount %&apos;)|| ISPICKVAL( Discount_Type__c , &apos;$ Off&apos;)) 
&amp;&amp; ( Discount_Amount__c = 0 || ISNULL(Discount_Amount__c) = TRUE)</errorConditionFormula>
        <errorDisplayField>Discount_Amount__c</errorDisplayField>
        <errorMessage>Amount Off can&apos;t be NULL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt;= Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date must be more than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Uses_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>( ISPICKVAL( Uses_Limit__c , &apos;Overall&apos; ) ||  ISPICKVAL( Uses_Limit__c , &apos;Per Customer&apos; ) ) 
&amp;&amp; (  Uses_Limit_Value__c = 0 || ISNULL( Uses_Limit_Value__c ) = TRUE )</errorConditionFormula>
        <errorDisplayField>Uses_Limit_Value__c</errorDisplayField>
        <errorMessage>Uses Limit Value can&apos;t be NULL</errorMessage>
    </validationRules>
</CustomObject>